--- a/Docker/app/nginx.conf
+++ b/Docker/app/nginx.conf
@@ -6,7 +6,9 @@ events {
 http {
     # Define the upstream server (Flask frontend service)
     upstream frontend {
-        server frontend:5000;  # Use the service name "frontend" and port 5000
+        server frontend:5000;  # Points to the first instance
+        server frontend:5001;  # Points to the second instance
+        server frontend:5002;  # Points to the third instance
     }
 
     server {
